Fix some Logic and optimize code

--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -2,8 +2,8 @@
 <ng-container>
   <c-container
     [fluid]="true"
-    class="border-bottom shadow-sm"
-    style="background-color: #30906a"
+    class=""
+    style="border: none;background-color: #30906a"
   >
     <c-header-nav class="d-none d-md-flex" style="width: fit-content">
       <button
