--- a/src/app/views/dashboard/tablewiget/tablewiget.component.html
+++ b/src/app/views/dashboard/tablewiget/tablewiget.component.html
@@ -1,5 +1,5 @@
-<c-card class="shadow" style="border: none">
-  <c-card-body>
+<div class="card shadow" style="border: none">
+  <div class="card-body">
     <!-- <div style="display: flex; justify-content: space-between; align-items: center;"> -->
     <h2 class="border-bottom">
       <span class="anuphan-700" style="color: green"
@@ -127,5 +127,5 @@
     </div>
 
     <!-- </app-docs-example> -->
-  </c-card-body>
-</c-card>
+  </div>
+</div>
