--- a/src/app/views/dashboard/tablewiget2/tablewiget2.component.html
+++ b/src/app/views/dashboard/tablewiget2/tablewiget2.component.html
@@ -1,10 +1,10 @@
-<c-card class="shadow" style="border: none">
+<div class="card shadow" style="border: none">
   <!-- <c-card-header>
         <div style="display: flex; justify-content: space-between; align-items: center;">
             <strong style="margin-right: auto;">สถานที่ครอบครองทรัพย์สินกี่จำนวน</strong>
           </div>
         </c-card-header> -->
-  <c-card-body>
+  <div class="card-body">
     <h3 class="border-bottom">
       <span class="anuphan-700" style="color: green"
         >สำนักมีครุภัณฑ์จำนวน</span
@@ -73,5 +73,5 @@
       >
       </mat-paginator>
     </div>
-  </c-card-body>
-</c-card>
+  </div>
+</div>
