--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,7 +1,7 @@
 // Here you can add other styles
 
 // custom .chartjs-tooltip-body-item padding
-@import "charts";
+// @import "charts";
 
 // custom tweaks for scrollbar styling (wip)
 @import "scrollbar";
