--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,63 +1,1 @@
-/* You can add global styles to this file, and also import other style files */
-
-// @import "../../node_modules/bootstrap-select/dist/css/bootstrap-select.min.css";
-
-
-// If you want to override variables do it here
-@import "variables";
-
-// Import styles with default layout.
-@import "@coreui/coreui/scss/coreui";
-
-// Import Chart.js custom tooltips styles
-@import "@coreui/chartjs/scss/coreui-chartjs";
-
-// Custom styles for this theme
-@import "theme";
-
-// Some temp fixes
-//@import "fixes";
-
-// @import '~@angular/material/prebuilt-themes/purple-green.css';
-// @import 'path/to/paginator-custom-theme.scss';
-
-
-// If you want to add custom CSS you can put it here.
-@import "custom";
-
-// Examples
-// We use those styles to show code examples, you should remove them in your application.
-@import "examples";
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-
-  
-.anuphan-400 {
-    font-family: "Anuphan", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-.anuphan-500 {
-    font-family: "Anuphan", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-.anuphan-600 {
-    font-family: "Anuphan", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-  }
-.anuphan-700 {
-    font-family: "Anuphan", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-  }
-
+@import "variables";@import "@coreui/coreui/scss/coreui";@import "theme";@import "custom";html,body{height:100%}body{margin:0;font-family:Roboto,"Helvetica Neue",sans-serif}.anuphan-400{font-family:"Anuphan",sans-serif;font-optical-sizing:auto;font-weight:400;font-style:normal}.anuphan-500{font-family:"Anuphan",sans-serif;font-optical-sizing:auto;font-weight:500;font-style:normal}.anuphan-600{font-family:"Anuphan",sans-serif;font-optical-sizing:auto;font-weight:600;font-style:normal}.anuphan-700{font-family:"Anuphan",sans-serif;font-optical-sizing:auto;font-weight:700;font-style:normal}
