--- a/src/app/views/dashboard/tablewiget3/tablewiget3.component.html
+++ b/src/app/views/dashboard/tablewiget3/tablewiget3.component.html
@@ -1,5 +1,5 @@
-<c-card class="border shadow">
-  <c-card-body>
+<div class="card border shadow">
+  <div class="card-body">
     <h3 class="border-bottom">
       <span class="anuphan-700" style="color: green;">รายละเอียดครุภัณฑ์ที่ครอบครอง</span></h3>
     <div class="table-responsive">
@@ -64,7 +64,7 @@
                 </table> -->
 
       <table mat-table [dataSource]="dataSource">
-
+        
         <ng-container matColumnDef="category">
           <th mat-header-cell *matHeaderCellDef>หมวดหมู่ครุภัณฑ์</th>
           <td mat-cell *matCellDef="let element">
@@ -102,5 +102,5 @@
       </mat-paginator>
       
     </div>
-  </c-card-body>
-</c-card>
+  </div>
+</div>
