--- a/src/app/views/system2/assetcount/assetcount.component.html
+++ b/src/app/views/system2/assetcount/assetcount.component.html
@@ -1,196 +1,210 @@
-<c-card class="shadow" style="border: none">
-  <c-card-body>
-    <h1><span class="anuphan-700">ตรวจนับครุภัณท์</span></h1>
+<div class="card shadow-sm" style="border: none">
+  <div class="card-body ">
+    <h1><span class="anuphan-700">ตรวจนับครุภัณท์ ({{this.userinfo.workgroup}})</span></h1>
     <hr />
-    <form cForm [formGroup]="assetForm" (ngSubmit)="onSubmit()">
-      <div class="row mb-3">
-        <!-- <div class="col"> -->
-        <!-- <label cLabel>วันทีเอกสาร:</label> -->
-        <input
-          cFormControl
-          placeholder="กรอกข้อมูล"
-          type="text"
-          formControlName="date"
-          hidden
-        />
-        <!-- </div> -->
-        <!-- <div class="col"> -->
-        <!-- <label cLabel>เลขที่เอกสาร</label> -->
-        <input
-          cFormControl
-          placeholder="กรอกข้อมูล"
-          type="text"
-          formControlName="serialNumber"
-          hidden
-        />
-        <!-- </div> -->
-      </div>
-      <div class="row mb-3">
-        <div class="col">
-          <label cLabel><span style="color: red;">*</span>รหัสแผนก</label>
-          <input
-            cFormControl
-            placeholder="กรอกข้อมูล"
-            type="text"
-            formControlName="departmentCode"
-          />
-        </div>
+    <div class="card" style="border: none;">
+      <div class="card-body">
+        <form cForm [formGroup]="assetForm" (ngSubmit)="onSubmit()">
+          <div class="row mb-3">
+            <!-- <div class="col"> -->
+            <!-- <label cLabel>วันทีเอกสาร:</label> -->
+            <input
+              cFormControl
+              placeholder="กรอกข้อมูล"
+              type="text"
+              formControlName="date"
+              hidden
+            />
+            <!-- </div> -->
+            <!-- <div class="col"> -->
+            <!-- <label cLabel>เลขที่เอกสาร</label> -->
+            <input
+              cFormControl
+              placeholder="กรอกข้อมูล"
+              type="text"
+              formControlName="serialNumber"
+              hidden
+            />
+            <!-- </div> -->
+          </div>
 
-        <div class="col">
-          <label cLabel><span style="color: red;">*</span> รหัสที่ตั้ง</label>
-          <input
-            cFormControl
-            placeholder="กรอกข้อมูล"
-            type="text"
-            formControlName="locationCode"
-          />
-        </div>
-      </div>
+          <div class="row mb-3">
+            <div class="col">
+              <label cLabel><span style="color: red;">*</span> แผนก</label>
 
-      <div class="row">
-        <div class="col">
-          <label cLabel><span style="color: red;">*</span> ผู้ตรวจนับ</label>
-          <input
-            cFormControl
-            placeholder="กรอกข้อมูล"
-            type="text"
-            formControlName="inspector"
-          />
-        </div>
+              <input
+                cFormControl
+                placeholder="กรอกข้อมูล"
+                type="text"
+                formControlName="departmentCode"
+              />
+              
+            </div>
 
-        <div class="col">
-          <label cLabel><span style="color: red;">*</span> ผู้ตรวจสอบ</label>
-          <input
-            cFormControl
-            placeholder="กรอกข้อมูล"
-            type="text"
-            formControlName="verifier"
-          />
-        </div>
+            <div class="col">
+              <label cLabel><span style="color: red;">*</span> ที่ตั้ง</label>
+              <input
+                cFormControl
+                placeholder="กรอกข้อมูล"
+                type="text"
+                formControlName="locationCode"
+              />
+            </div>
+          </div>
 
-        <div class="col">
-          <label cLabel><span style="color: red;">*</span> หมายเหตุ</label>
-          <input
-            cFormControl
-            type="text"
-            formControlName="note"
-            placeholder="ระบุหมายเหตุ"
-            class="form-control"
-          />
-        </div>
-      </div>
+          <div class="row mb-3">
+            <div class="col">
+              <label cLabel><span style="color: red;">*</span> ผู้ตรวจนับ</label>
+              <input
+                cFormControl
+                placeholder="กรอกข้อมูล"
+                type="text"
+                formControlName="inspector"
+              />
+            </div>
 
-      <br />
+            <div class="col">
+              <label cLabel><span style="color: red;">*</span> ผู้ตรวจสอบ</label>
+              <input
+                cFormControl
+                placeholder="กรอกข้อมูล"
+                type="text"
+                formControlName="verifier"
+              />
+            </div>
 
-      <div style="text-align: center">
-        <button
-          type="button"
-          class="btn btn-success anuphan-600 m-1"
-          style="color: white"
-          (click)="addform()"
-        >
-        <svg [cIcon]="icons.cibAddthis" ></svg> เพิ่มฟอร์ม
-        </button>
+            <div class="col">
+              <label cLabel><span style="color: red;">*</span> หมายเหตุ</label>
+              <input
+                cFormControl
+                type="text"
+                formControlName="note"
+                placeholder="ระบุหมายเหตุ"
+                class="form-control"
+              />
+            </div>
+          </div>
 
-        <button
-          type="button"
-          class="btn btn-success anuphan-600"
-          style="color: white"
-          (click)="scanQr()"
-        >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="width: 20px;">
-          <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com 
-            License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-            <path fill="#ffffff" d="M0 224h192V32H0v192zM64 
-            96h64v64H64V96zm192-64v192h192V32H256zm128 
-            128h-64V96h64v64zM0 
-            480h192V288H0v192zm64-128h64v64H64v-64zm352-64h32v128h-96v-32h-32v96h-64V288h96v32h64v-32zm0 
-            160h32v32h-32v-32zm-64 0h32v32h-32v-32z"/></svg> Qr-code
-        </button>
-      </div>
-      <!-- </form> -->
-      <br /><br />
+          <br />
 
-      <div class="table-responsive">
-        <!-- <form [formGroup]="form" (ngSubmit)="onSubmit()"> -->
-        <table class="table table-striped table-hover">
-          <!-- Displayed Columns -->
-          <thead>
-            <tr>
-              <th class="border" style="width: 75px">ลำดับ</th>
-              <ng-container *ngFor="let column of displayedColumns3">
-                <th class="border">{{ column }}</th>
-              </ng-container>
-            </tr>
-          </thead>
-          <tbody class="border">
-            <tr
-              *ngFor="let formGroup of formArray.controls; let rowIndex = index"
-            >
-              <!-- Add rows using index loop -->
-              <td class="text-center border">{{ rowIndex + 1 }}</td>
-              <!-- Add 1, 2, 3, ... index -->
-              <ng-container
-                *ngFor="let column of displayedColumns3; let colIndex = index"
+          <div class="row  mb-3">
+            <div class="col d-grid">
+                <button
+                type="button"
+                class="btn btn-success anuphan-600  p-3"
+                style="color: white"
+                (click)="addform()"
               >
-                <!-- Iterate through each column -->
-                <ng-container *ngIf="column !== 'ลำดับ'">
-                  <!-- <td class="border" *ngIf="column !== 'รหัสครุภัณฑ์'">
-                    Display the value of the form control
-                    <input cFormControl placeholder="กรอกข้อมูล" [formControl]="$any(formGroup.get(column)!)" />
-                  </td> -->
-                  <td
-                    class="border"
-                    *ngIf="column === 'รหัสครุภัณฑ์'"
-                    style="width: 550px"
+                <svg [cIcon]="icons.cibAddthis" ></svg> เพิ่มครุภัณฑ์
+              </button>
+            </div>
+            <div class="col d-grid">
+              <button
+                  type="button"
+                  class="btn btn-success anuphan-600 p-3"
+                  style="color: white"
+                  (click)="scanQr()"
+                >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="width: 20px;">
+                  <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com 
+                    License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path fill="#ffffff" d="M0 224h192V32H0v192zM64 
+                    96h64v64H64V96zm192-64v192h192V32H256zm128 
+                    128h-64V96h64v64zM0 
+                    480h192V288H0v192zm64-128h64v64H64v-64zm352-64h32v128h-96v-32h-32v96h-64V288h96v32h64v-32zm0 
+                    160h32v32h-32v-32zm-64 0h32v32h-32v-32z"/></svg> Qr-code
+                </button>
+            </div>
+            
+            
+            
+          </div>
+          <!-- </form> -->
+          <br />
+
+          <div class="table-responsive">
+            <!-- <form [formGroup]="form" (ngSubmit)="onSubmit()"> -->
+            <table class="table table-striped table-hover">
+              <!-- Displayed Columns -->
+              <thead>
+                <tr>
+                  <th class="border" style="width: 75px">ลำดับ</th>
+                  <ng-container *ngFor="let column of displayedColumns3">
+                    <th class="border">{{ column }}</th>
+                  </ng-container>
+                </tr>
+              </thead>
+              <tbody class="border">
+                <tr
+                  *ngFor="let formGroup of formArray.controls; let rowIndex = index"
+                >
+                  <!-- Add rows using index loop -->
+                  <td class="text-center border">{{ rowIndex + 1 }}</td>
+                  <!-- Add 1, 2, 3, ... index -->
+                  <ng-container
+                    *ngFor="let column of displayedColumns3; let colIndex = index"
                   >
-                    <mat-select
-                      class="form-control"
-                      [formControl]="$any(formGroup.get(column)!)"
-                      placeholder="เลือกครุภัณฑ์"
-                      #singleSelect
-                    >
-                      <mat-option>
-                        <ngx-mat-select-search
-                          [formControl]="assetdataFilterCtrl"
-                        >
-                        </ngx-mat-select-search>
-                      </mat-option>
-                      <mat-option
-                        *ngFor="let assetData of filteredAssetData | async"
-                        [value]="assetData.assetId"
+                    <!-- Iterate through each column -->
+                    <ng-container *ngIf="column !== 'ลำดับ'">
+                      <!-- <td class="border" *ngIf="column !== 'รหัสครุภัณฑ์'">
+                        Display the value of the form control
+                        <input cFormControl placeholder="กรอกข้อมูล" [formControl]="$any(formGroup.get(column)!)" />
+                      </td> -->
+                      <td
+                        class="border"
+                        *ngIf="column === 'รหัสครุภัณฑ์'"
+                        style="width: 550px"
                       >
-                        {{ assetData.assetCode }}
-                      </mat-option>
-                    </mat-select>
-                  </td>
-                  <td
-                    class="border"
-                    *ngIf="
-                      column === 'รายการ' &&
-                      formGroup.get('รหัสครุภัณฑ์')!.value"
-                  >
-                    {{ getAssetName(formGroup.get("รหัสครุภัณฑ์")!.value) }}
-                  </td>
-                </ng-container>
-              </ng-container>
-            </tr>
-          </tbody>
-        </table>
+                        <mat-select
+                          class="form-control"
+                          [formControl]="$any(formGroup.get(column)!)"
+                          placeholder="เลือกครุภัณฑ์"
+                          #singleSelect
+                        >
+                          <mat-option>
+                            <ngx-mat-select-search
+                              [formControl]="assetdataFilterCtrl"
+                            >
+                            </ngx-mat-select-search>
+                          </mat-option>
+                          <mat-option
+                            *ngFor="let assetData of filteredAssetData | async"
+                            [value]="assetData.assetId"
+                          >
+                            {{ assetData.assetCode }} {{assetData.assetName}}
+                          </mat-option>
+                        </mat-select>
+                      </td>
+                      <td
+                        class="border"
+                        *ngIf="
+                          column === 'รายการ' &&
+                          formGroup.get('รหัสครุภัณฑ์')!.value"
+                      >
+                        {{ getAssetName(formGroup.get("รหัสครุภัณฑ์")!.value) }}
+                      </td>
+                    </ng-container>
+                  </ng-container>
+                </tr>
+              </tbody>
+            </table>
 
-        <br />
+            <br />
 
-        <button
-          mat-raised-button
-          class="btn btn-success anuphan-600"
-          color="primary"
-          type="submit"
-          style="color: white"
-        >
-          ดำเนินการ
-        </button>
-        
+            <button
+              mat-raised-button
+              class="btn btn-success anuphan-600"
+              color="primary"
+              type="submit"
+              style="color: white"
+            >
+              ดำเนินการ
+            </button>
+            
+          </div>
+
+        </form>
       </div>
-    </form>
-  </c-card-body>
-</c-card>
+    </div>
+  </div>
+</div>
