--- a/src/app/views/system2/repair/repair.component.html
+++ b/src/app/views/system2/repair/repair.component.html
@@ -1,97 +1,202 @@
-<c-card class="mb-4 shadow" style="border: none;">
-    
-    <c-card-body>
-      <h1><span class="anuphan-700">รายการบันทึกการซ่อมแซมและบำรุงรักษา</span></h1><hr/>
-  
-      <form cForm (submit)="onSubmit()">
-            <div class="row mb-3">
+<div class="card mb-4 shadow-sm" style="border: none">
+  <div class="card-body">
+    <h1>
+      <span class="anuphan-700">รายการบันทึกการซ่อมแซมและบำรุงรักษา</span>
+    </h1>
+    <hr />
+
+    <div class="card" style="border: none">
+      <div class="card-body">
+        <form cForm (submit)="onSubmit()">
+          <div class="row mb-3">
+            <div class="col">
+              <label cLabel for="assetCode">รหัสครุภัณฑ์</label>
+              <!-- <input
+                cFormControl
+                [(ngModel)]="assetCode"
+                type="text"
+                id="assetCode"
+                name="assetCode"
+                required
+              /> -->
+              
+              <mat-select
+              class="form-control"
+              id="assetCode"
+              [(ngModel)]="asset.assetId"
+              name="assetCode"
+              placeholder="เลือกครุภัณฑ์"
+              #singleSelect
+            >
+              <mat-option>
+                <ngx-mat-select-search [formControl]="assetdataFilterCtrl">
+                </ngx-mat-select-search>
+              </mat-option>
+              <mat-option
+                *ngFor="let asset of filteredAssetData | async"
+                [value]="asset.assetId"
+              >
+                {{ asset.assetCode }} {{asset.assetName}}
+              </mat-option>
+            </mat-select>
+
+            </div>
+
+            <!-- <div class="col-1 align-self-end">
+              <button type="button" cButton color="info" (click)="onSearch()">
+                <svg [cIcon]="icons.cilMagnifyingGlass"></svg>
+              </button>
+            </div> -->
 
             <div class="col">
-                <label cLabel for="assetCode">รหัสครุภัณฑ์</label>
-                <input cFormControl [(ngModel)]="assetCode" type="text" id="assetCode" name="assetCode" required>
+              <label cLabel for="assetCodeInput">เลขที่เอกสาร</label>
+              <input
+                cFormControl
+                name="SerialNumber"
+                id="assetCodeInput"
+                placeholder="เลขที่เอกสาร"
+                class="form-control"
+                type="text"
+                [(ngModel)]="asset.SerialNumber"
+                required
+              />
             </div>
-            
-            <div class="col-1 align-self-end">
-                <button type="button" cButton color="info" (click)="onSearch()">
-                    <svg [cIcon]="icons.cilMagnifyingGlass"></svg></button>
-            </div>
-    
+          </div>
+
+          <div class="row mb-3">
             <div class="col">
-                <label cLabel for="assetCodeInput">เลขที่เอกสาร</label>
-                <input cFormControl name="SerialNumber" id="assetCodeInput" 
-                placeholder="เลขที่เอกสาร" class="form-control"
-                type="text" [(ngModel)]="asset.SerialNumber" required>
-    
+              <label cLabel for="assetCodeInput">รายละเอียด</label>
+              <input
+                cFormControl
+                name="Description"
+                id="assetCodeInput"
+                placeholder="ระบุรายละเอียด"
+                class="form-control"
+                type="text"
+                [(ngModel)]="asset.Description"
+                required
+              />
             </div>
-            </div>
-    
-            <div class="row mb-3">
-                
-              <div class="col">
-                  <label cLabel for="assetCodeInput">รายละเอียด</label>
-                  <input cFormControl name="Description" id="assetCodeInput" 
-                  placeholder="ระบุรายละเอียด" class="form-control"
-                  type="text" [(ngModel)]="asset.Description" required>
-              </div>
 
-              <div class="col">
-                  <label cLabel for="assetCodeInput">จำนวนเงิน</label>
-                  <input cFormControl name="Amount" id="assetCodeInput" 
-                  placeholder="ระบุจำนวนเงิน" class="form-control"
-                  type="text" [(ngModel)]="asset.Amount" required>
-              </div>
-
-              <div class="col align-self-end">
-                <button cButton class="anuphan-600" 
-                type="submit" color="success"  
-                style="color: white;">ดำเนินการ</button>
-              </div>
+            <div class="col">
+              <label cLabel for="assetCodeInput">จำนวนเงิน</label>
+              <input
+                cFormControl
+                name="Amount"
+                id="assetCodeInput"
+                placeholder="ระบุจำนวนเงิน"
+                class="form-control"
+                type="text"
+                [(ngModel)]="asset.Amount"
+                required
+              />
             </div>
-    
-            
-        
-      </form><br />
-  
-        <div class="table-responsive">
-          <table mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover ">
-  
-            <!-- Actions Column -->
-            <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef style="font-weight: bold;">#</th>
-              <td mat-cell *matCellDef="let asset">
-  
-                <button class="btn btn-sm btn-warning m-1" (click)="editAsset(asset)"
-                  style="width: 28px;height: 28px; padding: 4px;">
-                  <svg [cIcon]="icons.cilPencil" style="color: white; width: 100%; height: 100%;"></svg>
-                </button>
-  
-                <button class="btn btn-sm btn-danger m-1" (click)="deleteAsset(asset)"
-                  style="width: 28px;height: 28px; padding: 4px;">
-                  <svg [cIcon]="icons.cilTrash" style="color: white; width: 100%; height: 100%;"></svg>
-                </button>
-              </td>
-            </ng-container>
-  
-            <!-- Dynamic Columns -->
-            <ng-container *ngFor="let column of displayedColumns2" [matColumnDef]="column">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bold;">{{ column }}</th>
-              <td mat-cell *matCellDef="let asset">{{ asset[column] }}</td>
-            </ng-container>
-  
-            <!-- Header Row -->
-            <tr mat-header-row
-              *matHeaderRowDef="['actions', 'รหัสครุภัณฑ์' , 'เลขที่เอกสาร' ,'รายละเอียด' ,'จำนวนเงิน']">
-            </tr>
-  
-            <!-- Data Rows -->
-            <tr mat-row
-              *matRowDef="let row; columns: ['actions',  'รหัสครุภัณฑ์' , 'เลขที่เอกสาร' ,'รายละเอียด' ,'จำนวนเงิน'];">
-            </tr>
-          </table>
-  
-          <!-- Paginator -->
-          <mat-paginator [pageSizeOptions]="[ 30, 50, 70, 100 ]" [pageSize]="15" showFirstLastButtons></mat-paginator>
-        </div>
-     
-    </c-card-body>
-  </c-card>
+
+            <div class="col align-self-end">
+              <button
+                cButton
+                class="anuphan-600"
+                type="submit"
+                color="success"
+                style="color: white"
+              >
+                ดำเนินการ
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <br />
+
+    <div class="table-responsive">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        matSort
+        class="table table-striped table-hover"
+      >
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef style="font-weight: bold">#</th>
+          <td mat-cell *matCellDef="let asset">
+            <button
+              class="btn btn-sm btn-warning m-1"
+              (click)="editAsset(asset)"
+              style="width: 28px; height: 28px; padding: 4px"
+            >
+              <svg
+                [cIcon]="icons.cilPencil"
+                style="color: white; width: 100%; height: 100%"
+              ></svg>
+            </button>
+
+            <button
+              class="btn btn-sm btn-danger m-1"
+              (click)="deleteAsset(asset)"
+              style="width: 28px; height: 28px; padding: 4px"
+            >
+              <svg
+                [cIcon]="icons.cilTrash"
+                style="color: white; width: 100%; height: 100%"
+              ></svg>
+            </button>
+          </td>
+        </ng-container>
+
+        <!-- Dynamic Columns -->
+        <ng-container
+          *ngFor="let column of displayedColumns2"
+          [matColumnDef]="column"
+        >
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            style="font-weight: bold"
+          >
+            {{ column }}
+          </th>
+          <td mat-cell *matCellDef="let asset">{{ asset[column] }}</td>
+        </ng-container>
+
+        <!-- Header Row -->
+        <tr
+          mat-header-row
+          *matHeaderRowDef="[
+            'actions',
+            'รหัสครุภัณฑ์',
+            'รายการครุภัณฑ์',
+            'เลขที่เอกสาร',
+            'รายละเอียด',
+            'จำนวนเงิน'
+          ]"
+        ></tr>
+
+        <!-- Data Rows -->
+        <tr
+          mat-row
+          *matRowDef="
+            let row;
+            columns: [
+              'actions',
+              'รหัสครุภัณฑ์',
+              'รายการครุภัณฑ์',
+              'เลขที่เอกสาร',
+              'รายละเอียด',
+              'จำนวนเงิน'
+            ]
+          "
+        ></tr>
+      </table>
+
+      <!-- Paginator -->
+      <mat-paginator
+        [pageSizeOptions]="[30, 50, 70, 100]"
+        [pageSize]="15"
+        showFirstLastButtons
+      ></mat-paginator>
+    </div>
+  </div>
+</div>
